Updated layout of files

--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,18 @@
 {
-    "name": "promoteinternational/promote-apex-plugin",
-    "type": "project",
-    "license": "GPL",
-    "authors": [
-        {
-            "name": "Beetroot developer",
-            "email": "denys.kubrakov@beetroot.se"
-        }
-    ],
-    "minimum-stability": "dev",
-    "require": {},
-    "autoload": {
-        "psr-4":{"Inc\\": "./inc"}
+  "name": "promoteinternational/promote-apex-plugin",
+  "type": "project",
+  "license": "GPL",
+  "authors": [
+    {
+      "name": "Beetroot developer",
+      "email": "denys.kubrakov@beetroot.se"
     }
+  ],
+  "minimum-stability": "dev",
+  "require": {},
+  "autoload": {
+    "psr-4": {
+      "Inc\\": "./inc"
+    }
+  }
 }
