Updated information for publication on wordpress.org

--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
   "license": "GPL",
   "authors": [
     {
-      "name": "Beetroot developer",
-      "email": "denys.kubrakov@beetroot.se"
+      "name": "Promote International AB",
+      "email": "info@promoteint.com"
     }
   ],
   "minimum-stability": "dev",
