Updated layout of project to comply with wordpress plugin guidelines

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "promote-apex-plugin",
+  "name": "promote-apex",
   "version": "1.2.0",
   "description": "Promote Apex plugin",
   "main": "index.js",
