--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "promoteinternational/promote-apex-plugin",
+  "name": "promoteinternational/promote-apex",
   "type": "project",
   "license": "GPL",
   "authors": [
@@ -9,10 +9,12 @@
     }
   ],
   "minimum-stability": "dev",
-  "require": {},
+  "require": {
+    "ext-json": "*"
+  },
   "autoload": {
     "psr-4": {
-      "Inc\\": "./inc"
+      "Apex\\": "apex/"
     }
   }
 }
